--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 		background-color: #777;	
 	}
 		header, nav, footer{
+			clear:both;
 			width: 960px;
 			text-align: center;
 			color: #777;
@@ -10,16 +11,19 @@
 			margin: 10px 0px 10px 150px;
 			background-color: #ebebeb;
 			padding: 40px 0 40px 0;
+			display: block;
 		}
 		section{
+			float: left;
 			width: 495px;
 			text-align: center;
 			color: #777;
 			font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 			font-size: 18px;
-			margin:10px 0px 10px 150px;
+			margin:10px 0px 20px 150px;
 			background-color: #ebebeb;
-			padding: 40px 0 1px 0
+			padding: 40px 0 1px 0;
+			display: inline;
 		}
 		article{
 			width: 470px;
@@ -52,12 +56,14 @@
 			padding: 10px 0px 10px 0px;
 		}
 		aside{
+			float: right;
 			width: 445px;
 			text-align: center;
 			color: #777;
 			font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 			font-size: 18px;
 			background-color: #ebebeb;
-			margin:10px 0 10px 15px;
+			margin:10px 115px 20px 15px;
 			padding: 44px 0 194px 0;
-		}
+			display: inline;
+			}
