--- a/style.css
+++ b/style.css
@@ -1,69 +1,57 @@
-	body{
-		background-color: #777;	
+body{
+	background-color: #777;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	}
-		header, nav, footer{
-			clear:both;
-			width: 960px;
-			text-align: center;
-			color: #777;
-			font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-			font-size: 18px;
-			margin: 10px 0px 10px 150px;
-			background-color: #ebebeb;
-			padding: 40px 0 40px 0;
-			display: block;
+header, nav, footer, section, #hs, p, h1, h2, h3, aside{
+	font-size: 18px;
+	color: #777;
+	text-align: center;
+	background-color: #ebebeb;
+}
+header, nav, footer{
+	clear:both;
+	width: 960px;
+	margin: 10px auto;
+	padding: 40px 0 40px 0;
+	display: block;
+	}
+#content{
+   		width: 960px;
+   		margin: 20px auto;
 		}
-		section{
-			float: left;
-			width: 495px;
-			text-align: center;
-			color: #777;
-			font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-			font-size: 18px;
-			margin:10px 0px 20px 150px;
-			background-color: #ebebeb;
-			padding: 40px 0 1px 0;
-			display: inline;
+section{
+		float: left;
+		width: 495px;
+		margin:10px 4px 20px 0px;
+		padding: 40px 0 1px 0;
+		display: inline;
 		}
-		article{
-			width: 470px;
-			text-align: center;
-			color: #ebebeb;
-			font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-			font-size: 18px;
-			background-color: #777;
-			margin:30px 0px 10px 10px;
-			padding: 20px 0px 3px 0px;
+article{
+		width: 470px;
+		text-align: center;
+		color: #ebebeb;
+		font-size: 18px;
+		background-color: #777;
+		margin:30px 0px 10px 10px;
+		padding: 20px 0px 6px 0px;
+		display: block;
 		}
-		h1{
-			width: 410px;
-			text-align: center;
-			color: #777;
-			font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-			font-size: 18px;
-			background-color: #ebebeb;
-			margin:15px 10px 10px 30px;
-			padding: 7px 0px 10px 0px;
-		}
-		p{
-			width: 410px;
-			text-align: center;
-			color: #777;
-			font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-			font-size: 18px;
-			background-color: #ebebeb;
-			margin:10px 10px 10px 30px;
-			padding: 10px 0px 10px 0px;
-		}
-		aside{
-			float: right;
-			width: 445px;
-			text-align: center;
-			color: #777;
-			font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-			font-size: 18px;
-			background-color: #ebebeb;
-			margin:10px 115px 20px 15px;
-			padding: 44px 0 194px 0;
-			display: inline;
+#hs{
+	width: 410px;
+	margin:20px 10px 10px 30px;
+	padding: 7px 0px 10px 0px;
+	}
+h1, h2, h3{
+	display: inline;
+	}
+p{
+	width: 410px;
+	margin:10px 10px 10px 30px;
+	padding: 10px 0px 10px 0px;
+	}
+aside{
+	float: left;
+	width: 445px;
+	margin:10px 0px 20px 15px;
+	padding: 44px 0 203px 0;
 			}
